(lang dune 3.16)

(name patch_analyser)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "CaptainLazarus")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name patch_analyser)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune (alcotest :with-test))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
