(lang dune 3.16)

(name patch_analyser)

(generate_opam_files true)

(source
 (github captainlazarus/jll1))

(authors "CaptainLazarus")

(maintainers "CaptainLazarus")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name patch_analyser)
 (synopsis "Patch analysis tool using OCaml and tree-sitter.")
 (description "A patch analysis library that leverages tree-sitter for parsing and analyzing code diffs.")
 (depends
   ocaml
   dune
   base
   atdgen-runtime
   tree-sitter
   (alcotest :with-test))
 (tags
  (topics "patch" "analysis" "tree-sitter" "diffs" "ocaml")))
